Added Ticket buttons on home screen.

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -86,8 +86,9 @@
                         <p>
                             In dynamischem Wechsel führen die unterschiedlichen Disziplinen durch den Abend. Die Kombination von Feuerjonglage, Flow-Künsten, Live-Musik und Musiktheater hat es in dieser Dimension noch nicht gegeben. Performt wird mit brennenden Schwertern, Reifen, Poi und Stäben verschiedener Länge. Neben Paar- und Ausdruckstanz sind Gruppen-Choreographien, Chorauftritte und Heldenlieder vom Barden Teile des Spektakels. Ethnische und klassische Instrumente verbinden sich mit modernen Musikelementen.
                         </p>
-                        <div class="flex flex-row flex-justify-end">
-                            <a class="btn btn-highlight text-uppercase" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
+                        <div class="btn-row flex flex-row flex-justify-end">
+                            <a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>
+                            <a class="btn btn-highlight text-uppercase" tag="tickets" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
                         </div>
                     </section>
 
