--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/CSS/burger.css">
     <link rel="stylesheet" href="assets/CSS/text-flex.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Abel|Josefin+Sans|Muli|Quicksand|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
 
@@ -73,7 +74,10 @@
                 <img class="logo" alt="Theater zur blauen Stunde (Logo)" src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png" srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
                 <div class="cta-btns flex">
                     <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>
-                    <a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>
+                    <!--<a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>-->
+                    
+                            <a class="btn btn-highlight text-uppercase text-c" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
+
                 </div>
             </div>
 
