--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/CSS/burger.css">
     <link rel="stylesheet" href="../assets/CSS/text-flex.css">
     <link rel="stylesheet" href="../assets/CSS/styles.css">
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Abel|Josefin+Sans|Muli|Quicksand|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
 
@@ -74,7 +74,19 @@
         <section id="trailer" class="flex flex-justify-center">
             <iframe width="480px" height="240px" src="https://www.youtube.com/embed/ecjxTfrydUI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
         <div class="container flex flex-justify-center flex-align-center flex-wrap">
+            
+            <article class="daten flex flex-column flex-justify-between">
+                <p class="text-c"> Freies Musiktheater trifft Feuerspiel! Der Mythos um Dido und Aeneas neu entfacht!<br>
+                Ein einzigartiges Flammendrama, nur in Berlin!</p>
+                <section class="daten flex flex-justify-between flex-row">
+                <section class="text-l"><h2>29. und 30. August 2020<br>
+                    </h2>Abenteuerzentrum Grunewald</section>
+                <section class="text-r"><h2>26 und 27. September 2020<br></h2>
+                    Freiluftkino Friedrichshagen</section>
+                    </section>
 
+            </article>
+            <hr>
             <article class="flex flex-row flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
                     <img title="Aus der Asche Artwork" alt="Aus der Asche Artwork" src="../assets/img/fotos/Aus-der-Asche.jpg">
