"Mehr erfahren..."-Button mit Link zu IG hinzugefügt.

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -128,7 +128,8 @@
                             Die Göttermutter Hera möchte es genauer wissen und stößt den Lauf der Geschichte auf eigene Faust an - Aeneas trifft auf Dido, Herrscherin Karthagos. Doch wissen beide, dass jenes Karthago einst von Rom zerstört werden wird?<br>
                             Ein wilder Tanz zwischen Menschen, Göttern, Leben, Tod, Pflicht, Neigung, Schicksal, Selbstbestimmung und einer blendenden Verheißung entbrennt...
                         </p>
-                        <div class="flex flex-row flex-justify-end">
+                        <div class="flex  btn-row flex-row flex-justify-end">
+                            <a target="_blank" href="https://www.instagram.com/theaterzurblauenstunde/" class="btn text-uppercase text-c">Mehr erfahren...</a>
                             <a class="btn btn-highlight text-uppercase" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
                         </div>
                     </section>
