Infos zu ermäßigten Tickets hinzugefügt.

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -135,6 +135,28 @@
                     </div>
                 </div>
             </div>
+            <hr>
+
+
+        </article>
+        <article class="tickets flex flex-column flex-align-center">
+            <div class="container">Ein ermäßigtes Ticket ist erhältlich für:<br>
+                <div class="ul flex flex-wrap">
+                <ul>
+                    <li>Schüler:innen</li>
+                    <li>Vollzeitstudierende</li>
+                    <li>Auszubildende</li>
+                    <li>berlinpass-Inhaber:innen</li>
+                </ul>
+                <ul>
+                    <li>ALG-2-Beziehende</li>
+                    <li>Personen im Rollstuhl</li>
+                    <li>Menschen über 65</li>
+                </ul></div>
+                 Bitte haltet beim Einlass den entsprechenden Nachweis parat.<br>
+                Kinder und Jugendliche (bis 14 J.) sehen die Vorstellung kostenlos.
+            </div>
+
 
 
         </article>
