Added banner to Tickets site.

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -71,6 +71,14 @@
         </nav>
     </header>
     <main class="body-margin flex flex-column flex-align-center" flex-justify-center>
+        <section id="top-img">
+            <div class="container"> <img src="/assets/img/fotos/AdA_Dido-Aeneas_Banner.jpg" title="Dido und Aeneas Banner" alt="Dido und Aeneas Banner">
+
+                <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>
+            </div>
+
+
+        </section>
         <article class="tickets flex flex-column flex-align-center">
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
@@ -142,18 +150,19 @@
         <article class="tickets flex flex-column flex-align-center">
             <div class="container">Ein ermäßigtes Ticket ist erhältlich für:<br>
                 <div class="ul flex flex-wrap">
-                <ul>
-                    <li>Schüler:innen</li>
-                    <li>Vollzeitstudierende</li>
-                    <li>Auszubildende</li>
-                    <li>berlinpass-Inhaber:innen</li>
-                </ul>
-                <ul>
-                    <li>ALG-2-Beziehende</li>
-                    <li>Personen im Rollstuhl</li>
-                    <li>Menschen über 65</li>
-                </ul></div>
-                 Bitte haltet beim Einlass den entsprechenden Nachweis parat.<br>
+                    <ul>
+                        <li>Schüler:innen</li>
+                        <li>Vollzeitstudierende</li>
+                        <li>Auszubildende</li>
+                        <li>berlinpass-Inhaber:innen</li>
+                    </ul>
+                    <ul>
+                        <li>ALG-2-Beziehende</li>
+                        <li>Personen im Rollstuhl</li>
+                        <li>Menschen über 65</li>
+                    </ul>
+                </div>
+                Bitte haltet beim Einlass den entsprechenden Nachweis parat.<br>
                 Kinder und Jugendliche (bis 14 J.) sehen die Vorstellung kostenlos.
             </div>
 
