Kleine Änderungen im Tickets Banner

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -71,10 +71,13 @@
         </nav>
     </header>
     <main class="body-margin flex flex-column flex-align-center" flex-justify-center>
-        <section id="top-img">
-            <div class="container"> <img src="/assets/img/fotos/AdA_Dido-Aeneas_Banner.jpg" title="Dido und Aeneas Banner" alt="Dido und Aeneas Banner">
+        <section id="banner">
+            <div class="banner flex flex-column flex-align-center">
+                <div class="flex flex-column flex-align-center">
+                    <img src="/assets/img/fotos/AdA_Dido-Aeneas_Banner.jpg" title="Dido und Aeneas Banner" alt="Dido und Aeneas Banner">
 
-                <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>
+                    <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>
+                </div>
             </div>
 
 
