Hid Grunewald ticket links

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -83,7 +83,7 @@
 
         </section>
         <article class="tickets flex flex-column flex-align-center">
-            <div class="container flex flex-row flex-wrap flex-justify-between">
+            <!--<div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
                     <h3>Aus der Asche - eine Feueroper (Premiere)</h3>
                     20-23 Uhr (Einlass 19 Uhr)<br>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr>-->
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
                     <h3>Aus der Asche - eine Feueroper</h3>
