Telegram Social Icon auf allen Unterseiten

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -79,51 +79,18 @@
                     <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>
                 </div>
             </div>
-
-
         </section>
+
         <article class="tickets flex flex-column flex-align-center">
-            <!--<div class="container flex flex-row flex-wrap flex-justify-between">
-                <div class="ticket-col">
-                    <h3>Aus der Asche - eine Feueroper (Premiere)</h3>
-                    20-23 Uhr (Einlass 19 Uhr)<br>
-                    📍 Abenteuerzentrum Grunewald
-                </div>
-                <div class="ticket-col flex flex-row flex-justify-between">
-                    <div class="ticket-col flex flex-align-center">
-                        <p class="datum">Samstag, 29.August 2020</p>
-                    </div>
-                    <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/ausderasche-2908/"><i class="fa fa-ticket"></i> Tickets</a></div>
-                    </div>
-                </div>
-            </div>
-            <hr>
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
-                    <h3>Aus der Asche - eine Feueroper</h3>
-                    20-23 Uhr (Einlass 19 Uhr)<br>
-                    📍 Abenteuerzentrum Grunewald
-                </div>
-                <div class="ticket-col flex flex-row flex-justify-between">
-                    <div class="ticket-col flex flex-align-center">
-                        <p class="datum">Sonntag, 30.August 2020</p>
-                    </div>
-                    <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/ausderasche-3008/"><i class="fa fa-ticket"></i> Tickets</a></div>
-                    </div>
-                </div>
-            </div>
-            <hr>-->
-            <div class="container flex flex-row flex-wrap flex-justify-between">
-                <div class="ticket-col">
-                    <h3>Aus der Asche - eine Feueroper</h3>
+                    <h3>Pandora & Prometheus <br>(Premiere)</h3>
                     19-22 Uhr (Einlass 18 Uhr)<br>
-                    📍 Freiluftkino Friedrichshagen
+                    📍 Strandbad Plötzensee
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
-                        <p class="datum">Samstag, 26.September 2020</p>
+                        <p class="datum">Samstag, 28.September 2024</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331873&bgswitch=false#/eventList/1538288592/event/2296331873"><i class="fa fa-ticket"></i> Tickets</a></div>
@@ -133,13 +100,13 @@
             <hr>
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
-                    <h3>Aus der Asche - eine Feueroper (Letzte Aufführung)</h3>
+                    <h3>Pandora & Prometheus</h3>
                     19-22 Uhr (Einlass 18 Uhr)<br>
-                    📍 Freilufktino Friedrichshagen
+                    📍 Strandbad Plötzensee
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
-                        <p class="datum">Sonntag, 27.September 2020</p>
+                        <p class="datum">Sonntag, 29.September 2024</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
                         <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331881&bgswitch=false#/eventList/1538288592/event/2296331881"><i class="fa fa-ticket"></i> Tickets</a></div>
@@ -147,6 +114,23 @@
                 </div>
             </div>
             <hr>
+            <div class="container flex flex-row flex-wrap flex-justify-between">
+                <div class="ticket-col">
+                    <h3>Pandora & Prometheus</h3>
+                    19-22 Uhr (Einlass 18 Uhr)<br>
+                    📍 Strandbad Plötzensee
+                </div>
+                <div class="ticket-col flex flex-row flex-justify-between">
+                    <div class="ticket-col flex flex-align-center">
+                        <p class="datum">Samstag, 05.Oktober 2024</p>
+                    </div>
+                    <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331881&bgswitch=false#/eventList/1538288592/event/2296331881"><i class="fa fa-ticket"></i> Tickets</a></div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        
 
 
         </article>
@@ -160,7 +144,7 @@
                         <li>berlinpass-Inhaber:innen</li>
                     </ul>
                     <ul>
-                        <li>ALG-2-Beziehende</li>
+                        <li>Bürgergeld-Beziehende</li>
                         <li>Personen im Rollstuhl</li>
                         <li>Menschen über 65</li>
                     </ul>
@@ -180,6 +164,15 @@
     </main>
     <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
+
+            <div class="icon">
+                <img class="flame-hover tg" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
+                <a target="_blank" tag="tg-social-icon" href="https://t.me/theaterzurblauenstunde">
+                    <img class="social-icons tg" alt="telegram-social-icon" src="../assets/img/telegram/Telegram_website.png">
+                    <img class="social-icons tg gold" alt="telegram-social-icon" src="../assets/img/telegram/Telegram_website_gold.png">
+                </a>
+            </div>
+
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/theaterzurblauenstunde/">
@@ -187,6 +180,8 @@
                     <img class="social-icons fb gold" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-Gold_512.png">
                 </a>
             </div>
+
+    
 
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
