--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -138,6 +138,15 @@
     </main>
     <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
+
+            <div class="icon">
+                <img class="flame-hover tg" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
+                <a target="_blank" tag="tg-social-icon" href="https://t.me/theaterzurblauenstunde">
+                    <img class="social-icons tg" alt="telegram-social-icon" src="../assets/img/telegram/Telegram_website.png">
+                    <img class="social-icons tg gold" alt="telegram-social-icon" src="../assets/img/telegram/Telegram_website_gold.png">
+                </a>
+            </div>
+
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/theaterzurblauenstunde/">
@@ -145,6 +154,8 @@
                     <img class="social-icons fb gold" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-Gold_512.png">
                 </a>
             </div>
+
+    
 
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
