Links in Ticketseite aktualisiert

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -74,9 +74,7 @@
         <section id="banner">
             <div class="banner flex flex-column flex-align-center">
                 <div class="flex flex-column flex-align-center">
-                    <img src="/assets/img/fotos/AdA_Dido-Aeneas_Banner.jpg" title="Dido und Aeneas Banner" alt="Dido und Aeneas Banner">
-
-                    <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>
+                    <img src="../assets/img/fotos/Pandora-Prometheus-Logo.png" title="'Pandora und Prometheus - Das Lied vom Feuer' Schriftzug" alt="'Pandora und Prometheus - Das Lied vom Feuer' Schriftzug">
                 </div>
             </div>
         </section>
@@ -93,7 +91,7 @@
                         <p class="datum">Samstag, 28.September 2024</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331873&bgswitch=false#/eventList/1538288592/event/2296331873"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/pp-28-09-24/4216530/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
@@ -109,7 +107,7 @@
                         <p class="datum">Sonntag, 29.September 2024</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331881&bgswitch=false#/eventList/1538288592/event/2296331881"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/pp-28-09-24/4216548/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
@@ -125,7 +123,7 @@
                         <p class="datum">Samstag, 05.Oktober 2024</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331881&bgswitch=false#/eventList/1538288592/event/2296331881"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/pp-28-09-24/4216549/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
