Neuer Header für Ticketpage und kleine Fixes

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -39,7 +39,7 @@
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="../assets/img/logo/N_Segno_Initialen.svg">
+                <img src="../assets/img/logo/TZBS_Logo-Initialen.svg">
             </a>
         </div>
         <div>
@@ -62,7 +62,8 @@
             <ul>
                 <li><a href="/">start</a></li>
                 <li><a href="/ueber">über uns</a></li>
-                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/pandora-prometheus/">Pandora & Prometheus (2024)</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper (2020)</a></li>
                 <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
@@ -74,7 +75,7 @@
         <section id="banner">
             <div class="banner flex flex-column flex-align-center">
                 <div class="flex flex-column flex-align-center">
-                    <img src="../assets/img/fotos/Pandora-Prometheus-Logo.png" title="'Pandora und Prometheus - Das Lied vom Feuer' Schriftzug" alt="'Pandora und Prometheus - Das Lied vom Feuer' Schriftzug">
+                    <img class="logo" src="../assets/img/fotos/Pandora-Prometheus-Logo.png" title="'Pandora und Prometheus - Das Lied vom Feuer' Schriftzug" alt="'Pandora und Prometheus - Das Lied vom Feuer' Schriftzug">
                 </div>
             </div>
         </section>
@@ -139,10 +140,9 @@
                         <li>Schüler:innen</li>
                         <li>Vollzeitstudierende</li>
                         <li>Auszubildende</li>
-                        <li>berlinpass-Inhaber:innen</li>
                     </ul>
                     <ul>
-                        <li>Bürgergeld-Beziehende</li>
+                        <li>Bürgergeld-Beziehende mit Berechtigungsnachweis</li>
                         <li>Personen im Rollstuhl</li>
                         <li>Menschen über 65</li>
                     </ul>
