Neues Headerlogo + aktualisiertes Menü

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -38,7 +38,7 @@
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="../assets/img/logo/N_Segno_Initialen.svg">
+                <img src="../assets/img/logo/TZBS_Logo-Initialen.svg">
             </a>
         </div>
         <div>
@@ -60,7 +60,8 @@
             <ul>
                 <li><a href="/">start</a></li>
                 <li><a href="/ueber">über uns</a></li>
-                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/pandora-prometheus/">Pandora & Prometheus (2024)</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper (2020)</a></li>
                 <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
