Header neu (Logo + Menü), Ticketbuttons entfernt

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -39,7 +39,7 @@
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="../assets/img/logo/N_Segno_Initialen.svg">
+                <img src="../assets/img/logo/TZBS_Logo-Initialen.svg">
             </a>
         </div>
         <div>
@@ -62,7 +62,8 @@
             <ul>
                 <li><a href="/">start</a></li>
                 <li><a href="/ueber">über uns</a></li>
-                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/pandora-prometheus/">Pandora & Prometheus (2024)</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper (2020)</a></li>
                 <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
@@ -100,7 +101,7 @@
                         </p>
                         <div class="btn-row flex flex-row flex-justify-end">
                             <a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>
-                            <a class="btn btn-highlight text-uppercase" tag="tickets" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
+                            <!--<a class="btn btn-highlight text-uppercase" tag="tickets" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>-->
                         </div>
                     </section>
 
@@ -130,7 +131,7 @@
                         </p>
                         <div class="flex  btn-row flex-row flex-justify-end">
                             <a target="_blank" href="https://www.instagram.com/theaterzurblauenstunde/" class="btn text-uppercase text-c">Mehr erfahren...</a>
-                            <a class="btn btn-highlight text-uppercase" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
+                            <!--<a class="btn btn-highlight text-uppercase" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>-->
                         </div>
                     </section>
 
