--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
 
 <body class="start">
     <div class="flex flex-align-center">
+        <div class="small-logo">
+            <a href="/">
+                <img src="assets/img/logo/TZBS_Logo-Initialen.svg">
+            </a>
+        </div>
+        <div>
+            <h1>Theater zur blauen Stunde e.V.</h1>
+        </div>
 
-        <h1 class="start">Theater zur blauen Stunde e.V.</h1>
     </div>
     <header>
         <div class="hover-box">
@@ -57,7 +64,8 @@
                 <ul>
                     <li><a href="/">start</a></li>
                     <li><a href="/ueber">über uns</a></li>
-                    <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                    <li><a href="/pandora-prometheus/">Pandora & Prometheus (2024)</a></li>
+                    <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper (2020)</a></li>
                     <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                     <li><a href="/kontakt">kontakt</a></li>
                     <li><a href="/datenschutz">datenschutzerklärung</a></li>
@@ -69,11 +77,11 @@
 
     </header>
     <main>
-        <div class="start flex flex-justify-center flex-align-center">
-            <div class="logo-grp flex flex-column flex-align-center flex-justify-center">
-                <img class="logo" alt="Theater zur blauen Stunde (Logo)" src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png" srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
+        <div class="start flex flex-justify-center flex-align-end">
+            <div class="logo-grp flex flex-column flex-align-end flex-justify-center">
+                <!--<img class="logo" alt="Theater zur blauen Stunde (Logo)" src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png" srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
                 <div class="cta-btns flex">
-                    <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>
+                    <!--<a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer</a>-->
                     <!--<a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>-->
                     
                             <a class="btn btn-highlight text-uppercase text-c" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
@@ -85,24 +93,42 @@
 
 
         <!-- BACKGROUND VIDEO -->
+        <!--Old Video
         <div class="bg-video">
             <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg">
 
             <video autoplay muted loop playsinline poster="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg" id="bgvid" class="desktop">
                 <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile_blue.webm" type="video/webm">
                 <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile_blue.mp4" type="video/mp4">
-                <!--<source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
-                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>-->
+                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>
+            </video>
+        </div> -->
 
+        <div class="bg-video">
+            <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg">
 
+            <video autoplay muted loop playsinline poster="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg" id="bgvid" class="desktop">
+                <source src="assets/videos/Teaser Website.webm" type="video/webm">
+                <source src="assets/videos/Teaser Website.mp4" type="video/mp4">
+              
             </video>
         </div>
 
 
 
     </main>
-    <footer class="flex flex-column flex-align-center fixed">
+    <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
+
+            <div class="icon">
+                <img class="flame-hover tg" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <a target="_blank" tag="tg-social-icon" href="https://t.me/theaterzurblauenstunde">
+                    <img class="social-icons tg" alt="telegram-social-icon" src="assets/img/telegram/Telegram_website.png">
+                    <img class="social-icons tg gold" alt="telegram-social-icon" src="assets/img/telegram/Telegram_website_gold.png">
+                </a>
+            </div>
+
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/theaterzurblauenstunde/">
