--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         </div> -->
 
         <div class="bg-video">
-            <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg">
+            <img class="vid-placeholder" src="assets/img/fotos/Teaser Website Still Image.jpg">
 
-            <video autoplay muted loop playsinline poster="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg" id="bgvid" class="desktop">
+            <video autoplay muted loop playsinline poster="assets/img/fotos/Teaser Website Still Image.jpg" id="bgvid" class="desktop">
                 <source src="assets/videos/Teaser Website.webm" type="video/webm">
                 <source src="assets/videos/Teaser Website.mp4" type="video/mp4">
               
