Wichtige Infos zu Ticketseite hinzugefügt

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -134,6 +134,12 @@
 
         </article>
         <article class="tickets flex flex-column flex-align-center">
+            <div class="container">
+                <h4>Wichtige Infos:</h4>
+                <p> 
+                    Beachtet, dass die Aufführung unter freiem Himmel stattfindet und kleidet euch entsprechend. Hinweise zum Wetter erhalten Ticketinhaber:innen ein paar Tage vor dem Aufführungstermin. Das Ticket beinhaltet ein Tagesticket für das Strandbad Plötzensee am Tag der Aufführung.
+                </p>
+            </div>
             <div class="container">Ein ermäßigtes Ticket ist erhältlich für:<br>
                 <div class="ul flex flex-wrap">
                     <ul>
@@ -149,9 +155,8 @@
                 </div>
                 Bitte haltet beim Einlass den entsprechenden Nachweis parat.<br>
                 Kinder und Jugendliche (bis 14 J.) sehen die Vorstellung kostenlos.
+                
             </div>
-
-
 
         </article>
 
