Neue Buttons in Unterseiten

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -100,7 +100,7 @@
                             In dynamischem Wechsel führen die unterschiedlichen Disziplinen durch den Abend. Die Kombination von Feuerjonglage, Flow-Künsten, Live-Musik und Musiktheater hat es in dieser Dimension noch nicht gegeben. Performt wird mit brennenden Schwertern, Reifen, Poi und Stäben verschiedener Länge. Neben Paar- und Ausdruckstanz sind Gruppen-Choreographien, Chorauftritte und Heldenlieder vom Barden Teile des Spektakels. Ethnische und klassische Instrumente verbinden sich mit modernen Musikelementen.
                         </p>
                         <div class="btn-row flex flex-row flex-justify-end">
-                            <a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>
+                            <a href="/ueber" class="btn text-c">Wer wir sind</a>
                             <!--<a class="btn btn-highlight text-uppercase" tag="tickets" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>-->
                         </div>
                     </section>
@@ -130,7 +130,7 @@
                             Ein wilder Tanz zwischen Menschen, Göttern, Leben, Tod, Pflicht, Neigung, Schicksal, Selbstbestimmung und einer blendenden Verheißung entbrennt...
                         </p>
                         <div class="flex  btn-row flex-row flex-justify-end">
-                            <a target="_blank" href="https://www.instagram.com/theaterzurblauenstunde/" class="btn text-uppercase text-c">Mehr erfahren...</a>
+                            <a target="_blank" href="https://www.instagram.com/theaterzurblauenstunde/" class="btn text-c">Mehr erfahren...</a>
                             <!--<a class="btn btn-highlight text-uppercase" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>-->
                         </div>
                     </section>
