--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -89,6 +89,7 @@
             </section>
 
             <article class="daten flex flex-column flex-justify-between">
+                <h2 class="text-c">Pandora & Prometheus - Das Lied vom Feuer</h3>
                 <p class="text-c"> Die flammende Inszenierung erzählt die Legende von Prometheus und verwebt sie in postmoderner Interpretation mit dem Mythos um die Büchse der Pandora.</p>
                 <br>
                 <section class="daten flex flex-justify-center flex-row">
@@ -112,7 +113,7 @@
                         <p>In den letzten Jahren hat sich die Feuerartistik vom Possenspiel in eine ernstzunehmende und komplexe Kunstform entwickelt. Wir erforschen ihr narratives und tänzerisches Potenzial und integrieren es in den abendfüllenden Rahmen eines Theaterstücks. Diese Kombination aus Sub- und Hochkultur sucht bundesweit ihresgleichen.</p>
                         <p>Seitdem die Menschen das Feuer zu kontrollieren vermögen, versammeln sie sich darum, um sich Geschichten zu erzählen. In dieser Jahrtausende alten Tradition soll unser Werk stehen, was sich darin auch inhaltlich widerspiegelt:</p>
                         <div class="btn-row flex flex-row flex-justify-end">
-                            <a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>
+                            <a href="/ueber" class="btn text-c">Wer wir sind</a>
                             <a class="btn btn-highlight text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/pp-28-09-24/"><i class="fa fa-ticket"></i> Tickets</a>
                         </div>
                     </section>
@@ -140,8 +141,8 @@
                         </p>
                         <p>Welches Lied wird am Ende gesungen? Tragödie oder Komödie?  </p>
 
-                        <div class="flex  btn-row flex-row flex-justify-end">
-                            <a target="_blank" href="https://www.instagram.com/theaterzurblauenstunde/" class="btn text-uppercase text-c">Mehr erfahren...</a>
+                        <div class="flex btn-row flex-row flex-justify-end">
+                            <a target="_blank" href="https://www.instagram.com/theaterzurblauenstunde/" class="btn text-c">Mehr erfahren...</a>
                             <a class="btn btn-highlight text-uppercase" tag="projects" href="https://pretix.eu/blauestunde/pp-28-09-24/"><i class="fa fa-ticket"></i> Tickets</a>
                         </div>
                     </section>
