--- a/ueber/index.html
+++ b/ueber/index.html
@@ -83,7 +83,7 @@
                             <br>
                             Unser Feuertheater integriert Elemente aus Tanz, Theater, Akrobatik, Musik und visueller Kunst. Diese interdisziplinäre Natur fördert die Zusammenarbeit und den Austausch der verschiedenen künstlerischen Disziplinen. Sie baut Brücken zwischen performativen Darstellungen und dienst als Beispiel für die erfolgreiche Verschmelzung unterschiedlicher Genres.
                             <div class="flex flex-row flex-justify-end">
-                                <a class="btn text-uppercase" tag="projects" href="/kontakt">Mitmachen!</a>
+                                <a class="btn" tag="projects" href="/kontakt">Mitmachen!</a>
                             </div>
                     </section>
 
@@ -141,7 +141,7 @@
                             Wir freuen uns auf euch!
                         </p>
                         <div class="flex flex-row flex-justify-end">
-                            <a class="btn text-uppercase" tag="projects" href="/pandora-prometheus/">Aktuelles Projekt</a>
+                            <a class="btn" tag="projects" href="/pandora-prometheus/">Aktuelles Projekt</a>
                         </div>
                     </section>
 
