Pressekit entfernt, Style Korrekturen

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -69,7 +69,7 @@
             </ul>
         </nav>
     </header>
-    <main class="contact body-margin flex flex-column flex-align-center" flex-justify-center>
+    <main class=" body-margin flex flex-column flex-align-center" flex-justify-center>
         <div class="container">
 
             <article class="flex flex-row flex-align-start flex-justify-center flex-wrap">
@@ -90,7 +90,7 @@
 
                 </div>
             </article>
-            <article class="contact flex flex-row-rev flex-align-start flex-justify-center flex-wrap">
+            <article class="special flex flex-row-rev flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
                     <img class="teaser-screenshot" title="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024" alt="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024" src="../assets/img/fotos/Apollon-Muse-Kontakt.jpg">
                 </div>
