--- a/impressum/index.html
+++ b/impressum/index.html
@@ -110,7 +110,7 @@
 
                 </article>
             </section>
-            <section id="pressekit">
+            <!--<section id="pressekit">
                 <article class="flex flex-row flex-wrap">
                     <div class="container">
                         <h2>Pressekit</h2>
@@ -123,7 +123,7 @@
                     </div>
 
                 </article>
-            </section>
+            </section>-->
 
         </div>
         <hr>
