--- a/tickets/index.html
+++ b/tickets/index.html
@@ -83,16 +83,16 @@
         <article class="tickets flex flex-column flex-align-center">
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
-                    <h3>Pandora & Prometheus <br>(Premiere)</h3>
-                    19-22 Uhr (Einlass 18 Uhr)<br>
-                    📍 Strandbad Plötzensee
+                    <h3>Pandora & Prometheus</h3>
+                    20-23 Uhr (Einlass 19 Uhr)<br>
+                    📍 Abenteuerzentrum Berlin
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
-                        <p class="datum">Samstag, 28.September 2024</p>
+                        <p class="datum">Samstag, 19. April 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/pp-28-09-24/4216530/"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299191/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
@@ -100,15 +100,15 @@
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
                     <h3>Pandora & Prometheus</h3>
-                    19-22 Uhr (Einlass 18 Uhr)<br>
-                    📍 Strandbad Plötzensee
+                    20-23 Uhr (Einlass 19 Uhr)<br>
+                    📍 Abenteuerzentrum Berlin
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
-                        <p class="datum">Sonntag, 29.September 2024</p>
+                        <p class="datum">Sonntag, 20. April 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/pp-28-09-24/4216548/"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299192/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
@@ -116,15 +116,30 @@
             <div class="container flex flex-row flex-wrap flex-justify-between">
                 <div class="ticket-col">
                     <h3>Pandora & Prometheus</h3>
-                    19-22 Uhr (Einlass 18 Uhr)<br>
-                    📍 Strandbad Plötzensee
+                    20-23 Uhr (Einlass 19 Uhr)<br>
+                    📍 Abenteuerzentrum Berlin
                 </div>
                 <div class="ticket-col flex flex-row flex-justify-between">
                     <div class="ticket-col flex flex-align-center">
-                        <p class="datum">Samstag, 05.Oktober 2024</p>
+                        <p class="datum">Samstag, 03. Mai 2025</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/pp-28-09-24/4216549/"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299193/"><i class="fa fa-ticket"></i> Tickets</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="container flex flex-row flex-wrap flex-justify-between">
+                <div class="ticket-col">
+                    <h3>Pandora & Prometheus</h3>
+                    20-23 Uhr (Einlass 19 Uhr)<br>
+                    📍 Abenteuerzentrum Berlin
+                </div>
+                <div class="ticket-col flex flex-row flex-justify-between">
+                    <div class="ticket-col flex flex-align-center">
+                        <p class="datum">Sonntag, 04. Mai 2025</p>
+                    </div>
+                    <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://pretix.eu/blauestunde/p-p-2025/4299194/"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
@@ -137,7 +152,7 @@
             <div class="container">
                 <h4>Wichtige Infos:</h4>
                 <p> 
-                    Beachtet, dass die Aufführung unter freiem Himmel stattfindet und kleidet euch entsprechend. Hinweise zum Wetter erhalten Ticketinhaber:innen ein paar Tage vor dem Aufführungstermin. Das Ticket beinhaltet ein Tagesticket für das Strandbad Plötzensee am Tag der Aufführung.
+                    Beachtet, dass die Aufführung unter freiem Himmel stattfindet und kleidet euch entsprechend. Hinweise zum Wetter erhalten Ticketinhaber:innen ein paar Tage vor dem Aufführungstermin.
                 </p>
             </div>
             <div class="container">Ein ermäßigtes Ticket ist erhältlich für:<br>
