--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -83,7 +83,7 @@
             <section id="banner">
                 <div class="banner flex flex-column flex-align-center">
 
-                        <img src="../assets/img/fotos/Pandora-und-Prometheus_banner-m-linien.jpg" title="Pandora und Prometheus Artwork breit" alt="Pandora und Prometheus Artwork breit">
+                        <img src="../assets/img/fotos/Pandora-und-Prometheus_4320x1800.jpg" title="Pandora und Prometheus Artwork breit" alt="Pandora und Prometheus Artwork breit">
 
                 </div>
             </section>
@@ -93,8 +93,8 @@
                 <p class="text-c"> Die flammende Inszenierung erzählt die Legende von Prometheus und verwebt sie in postmoderner Interpretation mit dem Mythos um die Büchse der Pandora.</p>
                 <br>
                 <section class="daten flex flex-justify-center flex-row">
-                    <section class="text-c"><h2>28.09.24 - 29.09.24 - 05.10.24<br>
-                        </h2>Strandbad Plötzensee
+                    <section class="text-c"><h2>19.04.25 - 20.04.25 - 03.05.25 - 04.05.25<br>
+                        </h2>Abenteuerzentrum Berlin
                     </section>
 
                     </section>
@@ -104,7 +104,7 @@
             
             <article class="flex flex-row flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
-                    <img title="Pandora und Prometheus Artwork" alt="Pandora und Prometheus Artwork" src="../assets/img/fotos/Pandora-und-Prometheus_square1920.jpg">
+                    <img title="Pandora und Prometheus Artwork" alt="Pandora und Prometheus Artwork" src="../assets/img/fotos/Pandora-und-Prometheus_square-20251920.jpg">
                 </div>
                 <div class="col-txt">
                     <section>
